--- a/old_layouts/archive-taxonomy.html
+++ b/old_layouts/archive-taxonomy.html
@@ -1,5 +1,6 @@
 ---
 layout: default
+author_profile: false
 ---
 
 {% if page.header.overlay_color or page.header.overlay_image or page.header.image %}
@@ -21,15 +22,8 @@ layout: default
     {% unless page.header.overlay_color or page.header.overlay_image %}
       <h1 id="page-title" class="page__title">{{ page.title }}</h1>
     {% endunless %}
-    <!-- devinlife comment : added google adsense sidebar -->
-    {% if page.toc_ads %}
-      <aside class="sidebar__right sticky">
-        <nav class="toc-custom">
-          {% include GoogleAdSenseSidbar.html %}
-        </nav>
-      </aside>
-    {% endif %}
-    <!-- devinlife comment : end -->
-    {{ content }}
+    {% for post in page.posts %}
+      {% include archive-single.html %}
+    {% endfor %}
   </div>
 </div>
