Add google search console tag

--- a/index.html
+++ b/index.html
@@ -5,3 +5,10 @@ sidebar: false
 header:
   image:
 ---
+
+
+<html>
+  <head>
+    <meta name="google-site-verification" content="xAUeIt95gyVt5GeBZzONF5lFcO4QCaFKTioGEuUiBQE" />
+  </head>
+</html>
