Add google search console tag

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: home
 author_profile: true
 sidebar: false
 header:
-  image:
+  image: 
 ---
 
 
@@ -11,4 +11,5 @@ header:
   <head>
     <meta name="google-site-verification" content="xAUeIt95gyVt5GeBZzONF5lFcO4QCaFKTioGEuUiBQE" />
   </head>
+  <body></body>
 </html>
