--- a/index.html
+++ b/index.html
@@ -1,7 +1,69 @@
 ---
-layout: default
+layout: newhome
 author_profile: false
 sidebar: false
-header:
-  image:
 ---
+<header>
+	<div class="container">
+		<div class="column">
+			<div>
+				<p class="editable">Hi, my name is </p>
+				<h1 class="editable">Chae Rim Kim; </h1>
+				<p class="editable">
+					I am a Developer based in South Korea.
+					<br>
+					I focus on designing and developing quality web applications.
+					<br>
+					I’ve been building up my skills in design, front-end development, and web development in <b>Flask, Django, Springboot, React, HTML and CSS /SASS.</b>
+				</p>
+			</div>
+		</div>
+		<div class="column">
+			<img src="{{ site.baseurl }}/assets/images/banner.png" alt="banner image">
+		</div>
+	</div>
+</header>
+
+<div class="container">
+	<h2 class="editable" style="text-align: center;">😊 A little bit about me.</h2>
+	<div class="cli">
+		<img src="/assets/images/terminal.jpg" alt="terminal skills" class="center">
+	</div>
+
+	<h2 class="editable" style="text-align: center;">📨 Connect with me! </h2>
+		<ul class="thirds">
+
+			<li class = "narrow">
+				<div class="image">{% include icon.html icon="look" %}</div>
+				<h3 class="editable">Look Around</h3>
+				<p class="editable">Look through my <a href="https://chaerim-kim.github.io/projects/">projects</a>, what I'm working on and the issues I'm currently interested in! </p>
+			</li>
+
+			<li class = "wide">
+				<div class="image"> <a href="https://github.com/chaerim-kim/">{% include icon.html icon="github" %}</a> </div>
+				<h3 class="editable">Github</h3>
+				<p class="editable">See the details of my projects <a href="https://github.com/chaerim-kim/"> here</a>. </p>
+			</li>
+
+			<li>
+
+				<div class="image"><a href="mailto:kcl0720@gmail.com">{% include icon.html icon="email" %}</a></div>
+				<h3 class="editable">Email</h3>
+				<p class="editable">If you’d like to chat, <a href="mailto:kcl0720@gmail.com"> get in touch </a> with me! </p>
+			</li>
+
+	</ul>
+</div>
+
+
+<div class="container">
+	<blockquote>
+		<p class="quote editable"> 저는 '잘하는' 개발자로서, 후에 누군가를 멘토링 해 줄 수 있는 자리를 목표로 하며 공부하고 있습니다. <br> 시작한 일에 대해서는 결과를 도출해내고, 지난 일에 대해서는 아쉬웠던 점을 드릴 다운하여 완연한 내 것으로 만들어나간다는 마인드로 임하고 있습니다. </p>
+		<div class="attribute">
+			<p class="meta">
+				<!-- <span class="image"><img class="editable" src="{{ site.baseurl }}/images/wooly.jpg" alt="Wooly"></span> -->
+				<span class="author editable"><strong> 💡 나의 목표</strong></span>
+			</p>
+		</div>
+	</blockquote>
+</div>
