Fix index blockquote

--- a/index.html
+++ b/index.html
@@ -58,10 +58,9 @@ sidebar: false
 
 <div class="container">
 	<blockquote>
-		<p class="quote editable"> 저는 '잘하는' 개발자로서, 후에 누군가를 멘토링 해 줄 수 있는 자리를 목표로 하며 공부하고 있습니다. <br> 시작한 일에 대해서는 결과를 도출해내고, 지난 일에 대해서는 아쉬웠던 점을 드릴 다운하여 완연한 내 것으로 만들어나간다는 마인드로 임하고 있습니다. </p>
+		<p class="quote editable"> 저는 '잘하는' 개발자로서, 후에 누군가를 멘토링 해 줄 수 있는 역량을 가진 사람이 되고싶습니다. <br> 시작한 일에 대해서는 결과를 도출해내고, 지난 일에 대해서는 아쉬웠던 점을 드릴 다운하여 완연한 내 것으로 만든다는 마인드로 임하고 있습니다. </p>
 		<div class="attribute">
 			<p class="meta">
-				<!-- <span class="image"><img class="editable" src="{{ site.baseurl }}/images/wooly.jpg" alt="Wooly"></span> -->
 				<span class="author editable"><strong> 💡 나의 목표</strong></span>
 			</p>
 		</div>
