Add recent posts to index page

--- a/index.html
+++ b/index.html
@@ -39,14 +39,13 @@ sidebar: false
 				<p class="editable">Look through my <a href="https://chaerim-kim.github.io/projects/">projects</a>, what I'm working on and the issues I'm currently interested in! </p>
 			</li>
 
-			<li class = "wide">
+			<li class = "narrow">
 				<div class="image"> <a href="https://github.com/chaerim-kim/">{% include icon.html icon="github" %}</a> </div>
 				<h3 class="editable">Github</h3>
 				<p class="editable">See the details of my projects <a href="https://github.com/chaerim-kim/"> here</a>. </p>
 			</li>
 
-			<li>
-
+			<li class = "narrow">
 				<div class="image"><a href="mailto:kcl0720@gmail.com">{% include icon.html icon="email" %}</a></div>
 				<h3 class="editable">Email</h3>
 				<p class="editable">If you’d like to chat, <a href="mailto:kcl0720@gmail.com"> get in touch </a> with me! </p>
@@ -54,6 +53,17 @@ sidebar: false
 
 	</ul>
 </div>
+
+
+<div class="container">
+	<h2 class="editable" style="text-align:center;">✍🏼 Recent Posts </h2>
+		<div class="posts">
+			{% for post in paginator.posts limit:4 %}
+					{% include recent-posts.html type="grid" %}
+			{% endfor %}
+		</div>
+</div>
+
 
 
 <div class="container">
