--- a/index.html
+++ b/index.html
@@ -24,12 +24,15 @@ sidebar: false
 	</div>
 </header>
 
-<div class="container">
+<div class="container2">
 	<h2 class="editable" style="text-align: center;">😊 A little bit about me.</h2>
 	<div class="cli">
 		<img src="/assets/images/terminal.jpg" alt="terminal skills" class="center">
 	</div>
+</div>
 
+
+<div class="container">
 	<h2 class="editable" style="text-align: center;">📨 Connect with me! </h2>
 		<ul class="thirds">
 
@@ -50,7 +53,6 @@ sidebar: false
 				<h3 class="editable">Email</h3>
 				<p class="editable">If you’d like to chat, <a href="mailto:kcl0720@gmail.com"> get in touch </a> with me! </p>
 			</li>
-
 	</ul>
 </div>
 
