Update about info and shortened description

--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@ sidebar: false
 				<p class="editable">Hi, my name is </p>
 				<h1 class="editable">Chae Rim Kim; </h1>
 				<p class="editable">
-					I am a Developer based in South Korea.
+					I am a Software Developer based in South Korea.
 					<br>
-					I focus on designing and developing quality web applications.
+					I focus on designing and developing quality applications and services.
 					<br>
-					I’ve been building up my skills in design, front-end development, and web development in <b>Flask, Django, Springboot, React, HTML and CSS /SASS.</b>
+					I’ve been building up my web development skills in <b>Python, Flask, Django, Java, HTML/CSS and JavaScript.</b>
 				</p>
 			</div>
 		</div>
