Implement new animated terminal for index page

--- a/index.html
+++ b/index.html
@@ -24,11 +24,33 @@ sidebar: false
 	</div>
 </header>
 
-<div class="container2">
+
+<div class="container">
 	<h2 class="editable" style="text-align: center;">😊 A little bit about me.</h2>
-	<div class="cli">
-		<img src="/assets/images/terminal.jpg" alt="terminal skills" class="center">
+
+	<div id="termynal">
 	</div>
+	<!-- include and initialise termynal.js -->
+	<script src="termynal.js"></script>
+	<script>
+		var termynal = new Termynal('#termynal', {
+			typeDelay: 40,
+			lineDelay: 700,
+			lineData: [
+				{ type: 'input', prompt: '▲ cat README.md', value: '' },
+				{ value: '👋🏼 Hi! I focus on creating well-designed and elegant web applications. I am interested in both frontend and backend, and am open to learning new frameworks as I go.' },
+				{ type: 'input', prompt: '▲ cat MORE.md', value: '' },
+				{  value: '👩🏻‍💻 Academically, I have obtained a First-Class Honours degree in BSc Computer Science from the University of Leeds, where I graduated with an exceptional dissertation grade.' },
+				{ type: 'input', prompt:'▲ ls skills ', value: '' },
+				{ type: 'progress', progressChar: '·' },
+				{ value: 'Python &nbsp Java &nbsp HTML/CSS &nbsp MySQL &nbsp Flask & Django  &nbsp Git' },
+			]
+		});
+	</script>
+
+	<!-- <div class="cli">
+		<img src="/assets/images/terminal.jpg" alt="terminal skills" class="center">
+	</div> -->
 </div>
 
 
