Set max and min value for terminal resizing

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ sidebar: false
 
 
 <div class="container">
-	<h2 class="editable" style="text-align: center;">😊 A little bit about me.</h2>
+	<h2 class="editable" style="text-align: center;">😊 A little bit about me</h2>
 
 	<div id="termynal">
 	</div>
@@ -42,7 +42,7 @@ sidebar: false
 				{ type: 'input', prompt: '▲ cat MORE.md', value: '' },
 				{  value: '👩🏻‍💻 Academically, I have obtained a First-Class Honours degree in BSc Computer Science from the University of Leeds, where I graduated with an exceptional dissertation grade.' },
 				{ type: 'input', prompt:'▲ ls skills ', value: '' },
-				{ type: 'progress', progressChar: '·' },
+				// { type: 'progress', progressChar: '·' },
 				{ value: 'Python &nbsp Java &nbsp HTML/CSS &nbsp MySQL &nbsp Flask & Django  &nbsp Git' },
 			]
 		});
