Changed front page to ver 2.0

--- a/index_SoftwareEngineer.html
+++ b/index_SoftwareEngineer.html
@@ -10,10 +10,11 @@ sidebar: false
 				<p class="editable">Hi, my name is </p>
 				<h1 class="editable">Chae Rim Kim; </h1>
 				<p class="editable">
-					I'm a Korea-based Technical Specialist currently working at Dell Technologies.
+					I am a Software Developer based in South Korea.
 					<br>
-					I am experienced in different sides of IT, starting from <b>software engineering to technical strategy</b>, and now I’ve been building up my expertise in <b>Infrastructure Solutions such as storage and servers.</b>
+					I focus on designing and developing quality applications and services.
 					<br>
+					I’ve been building up my web development skills in <b>Python, Flask, Django, Java, HTML/CSS and JavaScript.</b>
 				</p>
 			</div>
 		</div>
@@ -33,12 +34,12 @@ sidebar: false
 	<div id="screen">
 		<!-- start of the screen -->
 		<p class="command">cat README.md</p>
-		<p class="response">👋🏼 Hi! I am an IT all-arounder experienced & interested in Software Engineering all the way to Infrastructure Solutions. I focus on delivering the best solutions with a high level of understanding and domain knowledge, thriving to become a better & more knowledgable person everyday. </p>
+		<p class="response">👋🏼 Hi! I focus on creating well-designed and elegant web applications. I am interested in both frontend and backend, and am open to learning new frameworks as I go.</p>
 
 		<p class="command">cat MORE.md</p>
 		<p class="response">👩🏻‍💻 Academically, I have obtained a First-Class Honours degree in BSc Computer Science from the University of Leeds, where I graduated with an exceptional dissertation grade. </p>
 
-		<p class="command">ls programming skills</p>
+		<p class="command">ls skills</p>
 		<p class="response array">
 			<span class="array-element">Python</span>,
 			<span class="array-element">Java</span>,
